--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^3.0.8",
+    "@types/react-datepicker": "^6.2.0",
     "@uploadthing/react": "^6.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -22,11 +29,15 @@
     "next": "14.1.3",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "stripe": "^14.20.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.5.2"
+    "uploadthing": "^6.5.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
